--- a/app/index.html
+++ b/app/index.html
@@ -14,37 +14,59 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
-              </li>
-            </ul>
-          </nav>
-          <img class="logo" src="images/logo.png" alt="logo" />
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Blog</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <button class="header__btn">
-            <img src="images/icon_menu.svg" alt="icon menu" />
-          </button>
-        </div>
-      </div>
-    </header>
     <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header__inner">
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">About</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">Gallery</a>
+                </li>
+              </ul>
+            </nav>
+            <img class="logo" src="images/logo.png" alt="logo" />
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">Blog</a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </nav>
+            <button class="header__btn">
+              <img src="images/icon_menu.svg" alt="icon menu" />
+            </button>
+            <div class="rightside-menu">
+              <button class="rightside-menu__close">
+                <img src="images/close.svg" alt="close" />
+              </button>
+              <div class="rightside-menu__content">
+                <a class="rightside-menu__logo" href="#"
+                  ><img src="images/logo-xl.png" alt="logo"
+                /></a>
+                <h4 class="rightside-menu__title">Furniture for life</h4>
+                <p class="rightside-menu__text">
+                  Sustainable hot chicken skateboard, dreamcatcher meggings
+                  actually squid. Slow-carb everyday carry +1 art party
+                  microdosing, put a bird on it brooklyn
+                </p>
+                <img
+                  class="rightside-menu__images"
+                  src="images/rightside-img.jpg"
+                  alt="chair"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
       <main class="main"></main>
       <footer class="footer">
         <div class="footer__content">
