--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,150 @@
             </div>
           </div>
         </section>
+        <section class="new-collection">
+          <div class="container-fluid">
+            <h3 class="new-collection__title">Furniture new collection</h3>
+            <p class="new-collection__text">
+              Deep v you probably haven't heard of them banh mi synth actually
+              affogato. Aesthetic lyft ethical drinking vinegar austint
+            </p>
+            <div class="collection">
+              <a class="collection__item" href="#">
+                <img
+                  class="collection__images"
+                  src="images/content/collection-1.jpg"
+                  alt=""
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  class="collection__images"
+                  src="images/content/collection-2.jpg"
+                  alt=""
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  class="collection__images"
+                  src="images/content/collection-3.jpg"
+                  alt=""
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  class="collection__images"
+                  src="images/content/collection-4.jpg"
+                  alt=""
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+              <a class="collection__item" href="#">
+                <img
+                  class="collection__images"
+                  src="images/content/collection-5.jpg"
+                  alt=""
+                />
+                <div class="collection__info">
+                  <h6 class="collection__info-title">
+                    Truffaut literally trust
+                  </h6>
+                  <p class="collection__info-text">
+                    Living room furntiture | Chair
+                  </p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </section>
+        <section class="decor">
+          <div class="container">
+            <h2 class="decor__title">
+              Aesthetic <br />
+              ethical drinking
+            </h2>
+            <p class="decor__text">
+              Deep v you probably haven't heard of them banh mi synth actually
+              affogato. Artlyft ethical the one drinking vinegar austint
+            </p>
+          </div>
+        </section>
+        <section class="work-path">
+          <div class="container">
+            <h3 class="work-path__title">How it works</h3>
+            <div class="work-path__items work-path__item--consultation">
+              <div class="work-path__items-box">
+                <div class="work-path__item">
+                  <img
+                    class="work-path__item-img"
+                    src="images/graphic-tool.svg"
+                    alt="img"
+                  />
+                  <h6 class="work-path__item-title">Designer Consultation</h6>
+                  <p class="work-path__item-text">
+                    Kinfolk scenester authentic craft beer truffaut irony
+                    intelligentsia YOLO lomo bushwick coloring book. Semiotics
+                    man bun venmo viral cliche
+                  </p>
+                </div>
+                <div class="work-path__item work-path__item--production">
+                  <img
+                    class="work-path__item-img"
+                    src="images/sofa.svg"
+                    alt="img"
+                  />
+                  <h6 class="work-path__item-title">Production</h6>
+                  <p class="work-path__item-text">
+                    Everyday carry actually neutra authentic kogi shabby chic
+                  </p>
+                </div>
+              </div>
+
+              <div class="work-path__item work-path__item--measuring">
+                <img
+                  class="work-path__item-img"
+                  src="images/measuring.svg"
+                  alt="img"
+                />
+                <h6 class="work-path__item-title">Measurements</h6>
+                <p class="work-path__item-text">
+                  Intelligentsia YOLO lomo bushwick coloring book. Semiotics man
+                  bun venmo viral cliche
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__content">
