gallery page finished

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -24,7 +24,9 @@
                   <a class="menu__list-link" href="#">About</a>
                 </li>
                 <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">Gallery</a>
+                  <a class="menu__list-link menu__list-link--active" href="#"
+                    >Gallery</a
+                  >
                 </li>
               </ul>
             </nav>
@@ -85,7 +87,7 @@
             </ul>
           </div>
         </div>
-        <div class="gallery">
+        <div class="gallery gallery-page">
           <div class="container-fluid">
             <div class="gallery__buttons">
               <button class="gallery__btn" data-filter=".living">
@@ -119,9 +121,39 @@
                 <a class="gallery__item" href="#">
                   <img src="images/gallery/5.jpg" alt="img" />
                 </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/1.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/2.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/3.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/4.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/5.jpg" alt="img" />
+                </a>
               </div>
 
               <div class="gallery__items mix bedroom">
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/1.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/2.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/3.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/4.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/5.jpg" alt="img" />
+                </a>
                 <a class="gallery__item" href="#">
                   <img src="images/gallery/1.jpg" alt="img" />
                 </a>
@@ -155,9 +187,39 @@
                 <a class="gallery__item" href="#">
                   <img src="images/gallery/5.jpg" alt="img" />
                 </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/1.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/2.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/3.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/4.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/5.jpg" alt="img" />
+                </a>
               </div>
 
               <div class="gallery__items mix dining">
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/1.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/2.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/3.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/4.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/5.jpg" alt="img" />
+                </a>
                 <a class="gallery__item" href="#">
                   <img src="images/gallery/1.jpg" alt="img" />
                 </a>
@@ -191,6 +253,21 @@
                 <a class="gallery__item" href="#">
                   <img src="images/gallery/5.jpg" alt="img" />
                 </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/1.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/2.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/3.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/4.jpg" alt="img" />
+                </a>
+                <a class="gallery__item" href="#">
+                  <img src="images/gallery/5.jpg" alt="img" />
+                </a>
               </div>
             </div>
           </div>
@@ -206,9 +283,7 @@
                   Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
                   schlitz you probably occupy
                 </p>
-                <a
-                  class="footer__info-email"
-                  href="mailto:ouremailaddress@email.com"
+                <a class="info-email" href="mailto:ouremailaddress@email.com"
                   >ouremailaddress@email.com</a
                 >
                 <form class="footer__info-form">
