--- a/app/page.html
+++ b/app/page.html
@@ -39,6 +39,9 @@
                 </li>
               </ul>
             </nav>
+            <button class="header__btn-menu">
+              <span></span><span></span><span></span>
+            </button>
             <button class="header__btn">
               <img src="images/icon_menu.svg" alt="icon menu" />
             </button>
@@ -91,9 +94,7 @@
                   Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
                   schlitz you probably occupy
                 </p>
-                <a
-                  class="footer__info-email"
-                  href="mailto:ouremailaddress@email.com"
+                <a class="info-email" href="mailto:ouremailaddress@email.com"
                   >ouremailaddress@email.com</a
                 >
                 <form class="footer__info-form">
